--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Brand">ตราสินค้า</a></li>
             <li><a href="#name" data-after="Brand Name">ชื่อสินค้า</a></li>
-            <li><a href="#projects" data-after="Mark">เครื่องหมาย</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
+            <li><a href="#projects" data-after="Mark">Mark</a></li>
+            <li><a href="#about" data-after="Picture">รูปสินค้า</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
@@ -44,7 +44,7 @@
         <h1>Seen <span></span></h1>
         <h1>Dumbell <span></span></h1>
         <h1>Website <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        
       </div>
     </div>
   </section>
@@ -82,7 +82,7 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 class="section-title">เครื่องหมาย <span>ต่าง ๆ</span></h1>
+        <h1 class="section-title">About <span>Marks</span></h1>
       </div>
       <div class="all-projects">
         <div class="project-item">
@@ -115,8 +115,8 @@
             <h1>โลโก้</h1>
             <h1>Logo</h1>
             <h2>Seen Dumbell ยกหนัก กล้ามใหญ่</h2>
-            <p>โลโก้เป้นสิ่งที่ช่วยสร้างความแตกต่างและเอกลักษณ์ที่โดเด่นของบรืษัท ทำให้สะท้อนถึงบุคลิกภาพของตราสินค้า
-              ส่วน Logo ก้จะเป็นรูปดัมเบลตรงกลาง และมีชื่อกับสโลแกนอยู่ข้างๆ วงกลม
+            <p>โลโก้เป้นสิ่งที่ช่วยสร้างความแตกต่างและเอกลักษณ์ที่โดดเด่นของบริษัท ทำให้สะท้อนถึงบุคลิกภาพของตราสินค้า
+              ส่วน Logo ก็จะเป็นรูปดัมเบลตรงกลาง และมีชื่อกับสโลแกนอยู่ข้างๆ วงกลม
             </p>
           </div>
           <div class="project-img">
@@ -128,7 +128,7 @@
             <h1>คำขวัญ</h1>
             <h1>Slogan</h1>
             <h2>ยกหนัก กล้ามใหญ่</h2>
-            <p>ส่วนด้านสโลแกนยกหนักกล้ามใหญ่นั้นก็หมายถึงยิ่งยกดัมเบลได้หนักเท่าใหน เราก็จะกล้ามใหญ่มากขึ้นเท่านั้น</p>
+            <p>ส่วนด้านสโลแกนยกหนักกล้ามใหญ่นั้นก็หมายถึงยิ่งยกดัมเบลได้หนักเท่าไหน เราก็จะกล้ามใหญ่มากขึ้นเท่านั้น</p>
           </div>
           <div class="project-img">
             <img src="./img/ยกหนัก.png" alt="img">
@@ -143,10 +143,19 @@
             <p>-เหล็กผลิตจาก USA</p>
             <p>-ด้ามจับสามรถรับน้ำหนักได้มากถึง 150 kg</p>
             <p>-ดัมเบลสามารถปรับลดน้ำหนักเองได้</p>
-            <p>-ดัมเบลมีอายุการใช้งานอย่างนเอย 10 ปี</p>
+            <p>-ดัมเบลมีอายุการใช้งานอย่างน้อย 10 ปี</p>
           </div>
           <div class="project-img">
             <img src="./img/labeldb.png" alt="img">
+          </div>
+        </div>
+
+        <div class="project-item">
+          <div class="project-info">
+            <img src="./img/qecode.png" alt="">
+          </div>
+          <div class="project-img">
+            <img src="./img/barcode.png" alt="img">
           </div>
         </div>
       </div>
@@ -159,18 +168,15 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
+          <img src="./img/dba3.png" alt="img">
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <h1 class="section-title">รูปสินค้า <span>Dumbell</span></h1>
+        <h2>1.ด้านเฉียง</h2>
+        <h2>2.ด้านบน</h2>
+        <h2>3.ด้านข้าง</h2>
+        <a href="#" class="cta">Seen Dumbell</a>
       </div>
     </div>
   </section>
@@ -187,23 +193,23 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
           <div class="contact-info">
             <h1>Phone</h1>
-            <h2>+1 234 123 1234</h2>
-            <h2>+1 234 123 1234</h2>
+            <h2>+66 0968054317</h2>
+            <h2>+66 038406017</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>info@gmail.com</h2>
-            <h2>abcd@gmail.com</h2>
+            <h2>Chowons@gmail.com</h2>
+            
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Fatikchhari, Chittagong, Bangladesh</h2>
+            <h2>SB-TECH</h2>
           </div>
         </div>
       </div>
@@ -215,23 +221,10 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>S</span>haif <span>A</span>rfan</h1>
+        <h1><span>Seen</span>Dumbell</h1>
       </div>
-      <h2>Your Complete Web Solution</h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
-        </div>
-      </div>
+      <h2>Credit by SHAIF ARFAN</h2>
+
       <p>Copyright © 2020 Arfan. All rights reserved</p>
     </div>
   </section>
