--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
             <h1>เครื่องหมายการค้า</h1>
             <h1>Trade Mark</h1>
             <h2>SDB</h2>
-            <p>ในด้านเครื่องหมายการค้า รูปนี้จะเป็นเครื่องหมายการค้า เป็นเครื่องหมายที่ใช้กำกับสินค้า โดยรูปลักษณะ
-              ก็จะเป็นตัว SDB เรียงขนาดตัวจากใหญ่มาเล็ก ซึ่งทั้งสามตัวอักษรก็จะอยู่ในวงรีสีขมพูอ่อน
+            <p>ในด้านเครื่องหมายการค้า รูปนี้จะเป็นเครื่องหมายการค้า เป็นเครื่องหมายที่ใช้กำกับสินค้า โดยรูปลักษณะก็จะเป็นตัว SDB เรียงขนาดตัวจากใหญ่มาเล็ก ซึ่งทั้งสามตัวอักษรก็จะอยู่ในวงรีสีชมพูอ่อน
             </p>
           </div>
           <div class="project-img">
